--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "marionette": "~2.4.1"
+    "marionette": "~2.4.1",
+    "bootstrap": "~3.3.4"
   }
 }
